fixed some missing whitespace

--- a/app/assets/stylesheets/journal.css
+++ b/app/assets/stylesheets/journal.css
@@ -123,52 +123,3 @@
   font-size: 16px;
   line-height: 22px;
 }
-
-
-
-
-
-/*
-.journal-entry-viewer {
-  background-color: #FFEFDC ;
-  height: 96px;
-  width: 100vw;
-  box-sizing: border-box;
-}
-
-.journal-entry-container {
-  display: flex;
-  background-color: #FFEFDC ;
-  height: 96px;
-  width: 100vw;
-  box-sizing: border-box
-}
-
-.journal-entry-info {
-  flex-direction: column;
-}
-
-.journal-entry-title {
-  flex: 1;
-  margin-top: 15px;
-  margin-left: 10px;
-  height: 21px;
-  width: 106px;
-  color: #200026;
-  font-family: Srimo, sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-}
-.joural-entry-date {
-  flex: 1;
-  margin-top: 15px;
-  margin-left: 10px;
-  height:19px;
-  width: 60px;
-  color: rgb(132,75,142);
-  font-family: Srimo, sans-serif;
-  font-weight: 200;
-  font-size: 16px;
-  line-height: 22px;
-}
- */
